# codingbuddy

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN_V2.md  PLAN_V3.md  PLAN_V5.md  PLAN_V6.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: codingbuddy.rb
crates/codingbuddy-agent/: Cargo.toml
crates/codingbuddy-agent/src/: agent_profiles.rs  lib.rs  local_routing.rs  observe.rs  prompts.rs  repo_map.rs  skills.rs  tool_bridge.rs  tool_surface.rs
crates/codingbuddy-agent/src/context/: mod.rs
crates/codingbuddy-agent/src/tool_loop/: agent_tools.rs  anti_hallucination.rs  cache.rs  compaction.rs  helpers.rs  mod.rs  model_routing.rs  permission_execution.rs  phases.rs  request_building.rs  result_handling.rs  safety.rs  streaming_executor.rs  types.rs  verification.rs
crates/codingbuddy-agent/src/tool_loop/tests/: compaction_cases.rs  context_cases.rs  flow_cases.rs  hallucination_cases.rs  mod.rs  quality_cases.rs  resilience_cases.rs
crates/codingbuddy-agent/tests/: coding_quality_benchmark.rs  feature_coverage.rs  functional_verification.rs  real_file_operations.rs  retrieval_wiring.rs  team_orchestration.rs  tool_use_default.rs
crates/codingbuddy-cli/: Cargo.toml
crates/codingbuddy-cli/src/: context.rs  context_enhanced.rs  errors.rs  main.rs
crates/codingbuddy-context/src/: lib.rs
crates/codingbuddy-core/: Cargo.toml
crates/codingbuddy-core/src/: complexity.rs  config_watcher.rs  cost.rs  lib.rs  llm_capabilities.rs  model_catalog.rs  (+3 more)
crates/codingbuddy-jsonrpc/: Cargo.toml
crates/codingbuddy-llm/: Cargo.toml
crates/codingbuddy-local-ml/: Cargo.toml
crates/codingbuddy-mcp/: Cargo.toml
crates/codingbuddy-store/: Cargo.toml
crates/codingbuddy-testkit/: Cargo.toml
crates/codingbuddy-tools/: Cargo.toml
docs/: CODING_QUALITY_BENCHMARK.md  CONFIG_REFERENCE.md  OPERATIONS.md  RELEASE.md  USER_GUIDE.md
docs/benchmarks/: coding_quality_baseline.json
npm/: install.js  package.json
scripts/: run_coding_quality_benchmark.sh
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts
(+74 files in other folders)
